--- a/First-App/src/app/app.component.html
+++ b/First-App/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>In app component</h1>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <h3>In app component</h3>
+            <hr>
+         <app-servers></app-servers> 
+    </div>
+    </div>
+    </div>
