--- a/First-App/src/app/servers/servers.component.html
+++ b/First-App/src/app/servers/servers.component.html
@@ -1,4 +1,12 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<label>Server Name</label>
+<input
+    type ="text"
+    class="form-control"
+    (input)="onUpdateServerName($event)">
+<button class="btn btn-primary" [disabled]="!allowNewServer"
+(click)="onCreateServer()">Add Server</button>
+<h4>{{serverCreationStatus}}</h4>
+<p>{{serverName}}</p>
 <app-server></app-server>
 <app-server></app-server>
 
