--- a/First-App/src/app/servers/servers.component.html
+++ b/First-App/src/app/servers/servers.component.html
@@ -11,9 +11,9 @@
 <button class="btn btn-primary" [disabled]="!allowNewServer"
 (click)="onCreateServer()">Add Server</button>
 
-<h4>{{serverCreationStatus}}</h4>
+<!--<h4>{{serverCreationStatus}}</h4> -->
 
-<p>{{serverName}}</p>
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 
 <app-server></app-server>
 <app-server></app-server>
