--- a/First-App/src/app/servers/servers.component.html
+++ b/First-App/src/app/servers/servers.component.html
@@ -13,7 +13,10 @@
 
 <!--<h4>{{serverCreationStatus}}</h4> -->
 
-<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
+<p *ngIf="serverCreated; else noServer">Server was created, server name is {{ serverName }}</p>
+<ng-template #noServer>
+    <p>No server created</p>
+</ng-template>
 
 <app-server></app-server>
 <app-server></app-server>
