--- a/First-App/src/app/servers/servers.component.html
+++ b/First-App/src/app/servers/servers.component.html
@@ -19,6 +19,6 @@
 </ng-template>
 
 <app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor = "let server of servers"></app-server>
 
 
