--- a/shopping-recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -3,18 +3,12 @@
         <button class="btn btn-success">New Recipe</button>
     </div>
 </div>
-<div class="row">
-    <div class="col-xs-12">
-        <a href="#" class="list-group-item clearfix">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">Recipe Name</h4>
-                <p class="list-group-item-text">Desription</p>
-            </div>
-            <span class="pull-right">
-                <img src="" alt="" class="img-responsive" style="max-height: 50px;">
-            </span>
-        </a>
-        <app-recipe-item></app-recipe-item>
+<hr>
+<div class="card" style="width: 18rem;"  *ngFor = "let recipe of recipes">
+    <img [src]="recipe.imagePath" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{recipe.name}}</h5>
+      <p class="card-text">{{recipe.description}}</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
-</div>
-
+  </div>
