display recipe and adding items to shopping list

--- a/shopping-recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,14 +1,16 @@
+<br>
 <div class="row">
     <div class="col-xs-12">
         <button class="btn btn-success">New Recipe</button>
     </div>
 </div>
-<hr>
-<div class="card" style="width: 18rem;"  *ngFor = "let recipe of recipes">
-    <img [src]="recipe.imagePath" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">{{recipe.name}}</h5>
-      <p class="card-text">{{recipe.description}}</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <hr>
+
+  <app-recipe-item *ngFor = "let recipe of recipes" 
+  [recipeItem]="recipe"
+  (readMoreRecipe)="onRecipeSelected(recipe)"></app-recipe-item>
+</div>
+</div>
