--- a/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,12 @@
 <div class="row">
     <div class="col-xs-12">
-        <img src="" alt="" class="img-responsive">
+        <img [src]="capturedRecipe.imagePath" alt="" class="img-responsive"
+        style="max-height: 300px;">
     </div>
 </div>
 <div class="row">
     <div class="col-xs-12">
-        <h1>Recipe Name</h1>
+        <h1>{{capturedRecipe.name}}</h1>
     </div>
 </div>
 <div class="row">
@@ -21,7 +22,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">Description</div>
+    <div class="col-xs-12">{{capturedRecipe.description}}</div>
 </div>
 <div class="row">
     <div class="col-xs-12">Ingredients</div>
