--- a/shopping-recipe-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,8 @@
-<p>recipe-item works!</p>
+<div class="card" style="width: 18rem;">
+    <img [src]="recipeItem.imagePath" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title">{{recipeItem.name}}</h5>
+      <p class="card-text">{{recipeItem.description}}</p>
+      <a href="#" class="btn btn-primary" (click) = "onSelected()">Read More</a>
+    </div>
+  </div>
