--- a/shopping-recipe-app/src/app/shopping-list/shopping-list.component.html
+++ b/shopping-recipe-app/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xs-10">
-        <app-shopping-edit></app-shopping-edit>
+        <app-shopping-edit (ingredientAdded) = "addNewIngredient($event)"></app-shopping-edit>
         <hr>
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-center"
