directives basic and better created

--- a/cmp-directive/src/app/app.component.html
+++ b/cmp-directive/src/app/app.component.html
@@ -19,6 +19,9 @@
         </div>
 
       </ul>
+
+      <p appBasicHighlight> Style with new Basic highlighter</p>
+      <p appBetterHighlight> Style with new Better highlighter</p>
     </div>
   </div>
 </div>
