--- a/cmp-directive/src/app/app.component.html
+++ b/cmp-directive/src/app/app.component.html
@@ -7,21 +7,36 @@
       </button>
       <br><br>
       <ul class="list-group">
-        <div *ngIf= "onlyOdd">
-          <li class="list-group-item" *ngFor="let odd of oddNumbers"
-          [ngClass] = "{odd: odd % 2 !== 0}"
-          [ngStyle] = "{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}">{{odd}}</li>
+        <div *ngIf="onlyOdd">
+          <li class="list-group-item" *ngFor="let odd of oddNumbers" [ngClass]="{odd: odd % 2 !== 0}"
+            [ngStyle]="{backgroundColor: odd % 2 !== 0 ? 'yellow' : 'transparent'}">{{odd}}</li>
         </div>
-        <div  *ngIf= "!onlyOdd">
-          <li class="list-group-item" *ngFor="let even of evenNumbers"
-          [ngClass] = "{odd: even % 2 !== 0}"
-          [ngStyle] = "{backgroundColor: even % 2 === 0 ? 'violet' : 'transparent'}">{{even}}</li>
+        <!-- <div *ngIf="!onlyOdd">
+          <li class="list-group-item" *ngFor="let even of evenNumbers" [ngClass]="{odd: even % 2 !== 0}"
+            [ngStyle]="{backgroundColor: even % 2 === 0 ? 'violet' : 'transparent'}">{{even}}</li>
         </div>
+        <ng-template [ngIf]="!onlyOdd">
 
+          <li class="list-group-item" *ngFor="let even of evenNumbers" [ngClass]="{odd: even % 2 !== 0}"
+            [ngStyle]="{backgroundColor: even % 2 === 0 ? 'violet' : 'transparent'}">{{even}}</li>
+
+        </ng-template> -->
+
+        <div *appUnless="onlyOdd">
+          <li class="list-group-item" *ngFor="let even of evenNumbers" [ngClass]="{odd: even % 2 !== 0}"
+            [ngStyle]="{backgroundColor: even % 2 === 0 ? 'violet' : 'transparent'}">{{even}}</li>
+        </div>
       </ul>
 
       <p appBasicHighlight> Style with new Basic highlighter</p>
-      <p appBetterHighlight> Style with new Better highlighter</p>
+      <p appBetterHighlight [defaultColor]="'red'" [highlightColor]="'yellow'"> Style with new Better highlighter</p>
+    </div>
+    <div [ngSwitch] = "value">
+      <p *ngSwitchCase = "5">This is 5</p>
+      <p *ngSwitchCase = "2">This is 2</p>
+      <p *ngSwitchCase = "10">This is 10</p>
+      <p *ngSwitchDefault>This is default</p>
+
     </div>
   </div>
 </div>
