--- a/shopping-recipe-app/src/app/header/header.component.html
+++ b/shopping-recipe-app/src/app/header/header.component.html
@@ -13,8 +13,9 @@
         </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <li class="nav-item dropdown" appDropdown>
+            <a class="nav-link dropdown-toggle"
+            href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Manage
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
