--- a/shopping-recipe-app/src/app/header/header.component.html
+++ b/shopping-recipe-app/src/app/header/header.component.html
@@ -13,12 +13,12 @@
         </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item dropdown" appDropdown>
+        <li class="nav-item dropdown" appDropdown #r="appDropdown">
             <a class="nav-link dropdown-toggle"
             href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Manage
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown" [ngClass]="{'show':r.isOpen}" >
              <li> <a class="dropdown-item" href="#">Save Data</a></li>
               <li><a class="dropdown-item" href="#">Fetch Data</a></li>
               <div class="dropdown-divider"></div>
