--- a/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -10,10 +10,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12">
-        <div class="btn-group" appDropdown>
+    <div class="col-xs-12" appDropdown #r="appDropdown"> 
+        <div class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" >Manage Recipe <span class="caret"></span></button>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" [ngClass]="{'show':r.isOpen}" >
                 <li><a href="#">To Shopping list</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
