UserService and CounterService added

--- a/assignment-angular/src/app/app.component.html
+++ b/assignment-angular/src/app/app.component.html
@@ -19,6 +19,9 @@
 
 		<hr>
 		<app-property-binding></app-property-binding>
+
+		<hr>
+		<app-services></app-services>
 			</div>
 		</div>
 	</div>
