--- a/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -25,5 +25,14 @@
     <div class="col-xs-12">{{capturedRecipe.description}}</div>
 </div>
 <div class="row">
-    <div class="col-xs-12">Ingredients</div>
+    <div class="col-xs-6">
+        <ul class="list-group">
+            <li class="list-group-item"
+            *ngFor= "let ing of capturedRecipe.ingredients">
+    {{ing.name}} - {{ing.amount}}
+            </li>
+    
+        </ul>
+    </div>
+   
 </div>
