--- a/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,7 +14,7 @@
         <div class="btn-group">
             <button type="button" class="btn btn-primary dropdown-toggle" >Manage Recipe <span class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="#">To Shopping list</a></li>
+                <li><a href="#" (click)="addToShoppingList(capturedRecipe.ingredients)">To Shopping list</a></li>
                 <li><a href="#">Edit Recipe</a></li>
                 <li><a href="#">Delete Recipe</a></li>
             </ul>
