--- a/cmp-routing/src/app/servers/servers.component.html
+++ b/cmp-routing/src/app/servers/servers.component.html
@@ -1,19 +1,17 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-4">
-      <div class="list-group">
-        <a
-          href="#"
-          class="list-group-item"
-          *ngFor="let server of servers">
-          {{ server.name }}
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-4">
-      <app-edit-server></app-edit-server>
-      <hr>
-      <app-server></app-server>
+  <div class="col-xs-12 col-sm-4">
+    <div class="list-group">
+      <a href="#" class="list-group-item" *ngFor="let server of servers">
+        {{ server.name }}
+      </a>
     </div>
   </div>
-  
-  
+  <div class="col-xs-12 col-sm-4">
+    <app-edit-server></app-edit-server>
+    <hr>
+    <app-server></app-server>
+
+  </div>
+  <br>
+  <button class="btn btn-danger" type="button" (click)="onReload()">Reload Server</button>
+</div>
