--- a/cmp-routing/src/app/servers/servers.component.html
+++ b/cmp-routing/src/app/servers/servers.component.html
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a href="#" class="list-group-item" *ngFor="let server of servers">
+      <a [routerLink]="['/servers',1,'edit']" [queryParams]="{allowedit: '1'}" fragment="loading" href=" #"
+        class="list-group-item" *ngFor="let server of servers">
         {{ server.name }}
       </a>
     </div>
