--- a/cmp-routing/src/app/servers/servers.component.html
+++ b/cmp-routing/src/app/servers/servers.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a [routerLink]="['/servers',1,'edit']" [queryParams]="{allowedit: '1'}" fragment="loading" href=" #"
-        class="list-group-item" *ngFor="let server of servers">
+      <a [routerLink]="['/servers',server.id]" href=" #" class="list-group-item" *ngFor="let server of servers">
+        <!-- [queryParams]="{allowedit: '1'}" fragment="loading"  -->
         {{ server.name }}
       </a>
     </div>
@@ -10,7 +10,7 @@
   <div class="col-xs-12 col-sm-4">
     <app-edit-server></app-edit-server>
     <hr>
-    <app-server></app-server>
+    <router-outlet></router-outlet>
 
   </div>
   <br>
