--- a/cmp-routing/src/app/users/user/user.component.html
+++ b/cmp-routing/src/app/users/user/user.component.html
@@ -1,4 +1,4 @@
 <p>User with ID {{user.id}} loaded.</p>
 <p>User name is {{user.name}}</p>
 
-<a [routerLink]="['/users',100,'Maxx']">Load using params observables</a>
+<a [routerLink]="['/users',user.id,user.name]">Load using params observables</a>
