--- a/cmp-routing/src/app/servers/servers.component.html
+++ b/cmp-routing/src/app/servers/servers.component.html
@@ -1,17 +1,14 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a [routerLink]="['/servers',server.id]" href=" #" class="list-group-item" *ngFor="let server of servers">
-        <!-- [queryParams]="{allowedit: '1'}" fragment="loading"  -->
+      <a [routerLink]="['/servers',server.id]" [queryParams]="{allowEdit: server.id === 3 ? 1 : 0}" fragment="loading"
+        href=" #" class="list-group-item" *ngFor="let server of servers">
         {{ server.name }}
       </a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
-    <app-edit-server></app-edit-server>
-    <hr>
     <router-outlet></router-outlet>
-
   </div>
   <br>
   <button class="btn btn-danger" type="button" (click)="onReload()">Reload Server</button>
