--- a/cmp-routing/src/app/home/home.component.html
+++ b/cmp-routing/src/app/home/home.component.html
@@ -1,3 +1,8 @@
 <h4>Welcome to Server Manager 4.0</h4>
 <p>Manage your Servers and Users.</p>
 <button class="btn btn-primary" type="button" (click)="loadServer(1)">Load Servers</button>
+<hr>
+<div class="bd-example">
+    <button class="btn btn-success btn-lg" style="margin: 5px;" (click)="onLogin()">Login</button>
+    <button class="btn btn-danger btn-lg" style="margin: 5px;" (click)="onLogout()">Logout</button>
+</div>
