--- a/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,6 @@
 <div class="row">
     <div class="col-xs-12">
-        <img [src]="capturedRecipe.imagePath" alt="" class="img-responsive"
-        style="max-height: 300px;">
+        <img [src]="capturedRecipe.imagePath" alt="" class="img-responsive" style="max-height: 300px;">
     </div>
 </div>
 <div class="row">
@@ -10,13 +9,16 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-xs-12" appDropdown > 
+    <div class="col-xs-12" appDropdown>
         <div class="btn-group">
-            <button type="button" class="btn btn-primary dropdown-toggle" >Manage Recipe <span class="caret"></span></button>
+            <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span
+                    class="caret"></span></button>
             <ul class="dropdown-menu">
-                <li><a href="#" (click)="addToShoppingList(capturedRecipe.ingredients)">To Shopping list</a></li>
-                <li><a href="#">Edit Recipe</a></li>
-                <li><a href="#">Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="addToShoppingList(capturedRecipe.ingredients)">To Shopping
+                        list</a></li>
+                <li><a style="cursor: pointer;" (click)="onEdit()">Edit Recipe</a>
+                </li>
+                <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
@@ -27,12 +29,11 @@
 <div class="row">
     <div class="col-xs-6">
         <ul class="list-group">
-            <li class="list-group-item"
-            *ngFor= "let ing of capturedRecipe.ingredients">
-    {{ing.name}} - {{ing.amount}}
+            <li class="list-group-item" *ngFor="let ing of capturedRecipe.ingredients">
+                {{ing.name}} - {{ing.amount}}
             </li>
-    
+
         </ul>
     </div>
-   
+
 </div>
