--- a/shopping-recipe-app/src/app/recipes/recipes.component.html
+++ b/shopping-recipe-app/src/app/recipes/recipes.component.html
@@ -1,13 +1,13 @@
 <div class="row">
-<div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
-</div>
-<div class="col-md-7">
-    <app-recipe-detail 
-        *ngIf="selectedRecipe; else infoText"
-        [capturedRecipe] = "selectedRecipe"></app-recipe-detail>
-        <ng-template #infoText>
+    <div class="col-md-5">
+        <app-recipe-list></app-recipe-list>
+    </div>
+    <div class="col-md-7">
+
+        <router-outlet></router-outlet>
+        <!-- <app-recipe-detail *ngIf="selectedRecipe; else infoText" [capturedRecipe]="selectedRecipe"></app-recipe-detail> -->
+        <!-- <ng-template #infoText>
             <p>Please select a Recipe !</p>
-        </ng-template>
-</div>
+        </ng-template> -->
+    </div>
 </div>
