--- a/cmp-forms/src/app/app.component.html
+++ b/cmp-forms/src/app/app.component.html
@@ -2,12 +2,13 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit()" #f="ngForm">
-        <div id="user-data">
+        <div id="user-data" ngModelGroup="userDataGroup" #userDataGroup="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" id="username" class="form-control" ngModel name="username" required>
+            <span class="help-block" *ngIf="!userDataGroup.valid && userDataGroup.touched">User is invalid</span>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input type="email" id="email" class="form-control" ngModel name="email" required email #email="ngModel">
@@ -25,8 +26,25 @@
           <textarea name="questionAnswer" class="form-control" rows="4" [(ngModel)]="answer"></textarea>
           <p>Your reply : {{answer}}</p>
         </div>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio" name="gender" ngModel [value]="gender" required>
+            {{gender}}
+          </label>
+
+        </div>
         <button class="btn btn-primary" [disabled]="!f.valid" type="submit">Submit</button>
       </form>
+    </div>
+  </div>
+  <hr>
+  <div *ngIf="isSubmitted" class="row">
+    <div class="col-xs-12">
+      <p>User : {{user.username}}</p>
+      <p>Email : {{user.email}}</p>
+      <p>Question : {{user.question}}</p>
+      <p>Answer : {{user.answer}}</p>
+      <p>Gender : {{user.gender}}</p>
     </div>
   </div>
 </div>
