--- a/assignment-angular/src/app/success-alert/success-alert.component.html
+++ b/assignment-angular/src/app/success-alert/success-alert.component.html
@@ -3,7 +3,7 @@
     <ol class="breadcrumb">
       <li class="breadcrumb-item inactive" aria-current="page">Assignment-1</li>
     </ol>
-    </nav>
+  </nav>
 </h3>
 <div class="row">
   <div class="col-xs-4">
@@ -11,4 +11,6 @@
       Success Alert
     </div>
   </div>
+
+  <app-warning-alert></app-warning-alert>
 </div>
