--- a/assignment-angular/src/app/home/home.component.html
+++ b/assignment-angular/src/app/home/home.component.html
@@ -24,7 +24,7 @@
                         <li><a routerLink="/assignment3">{{assignments[2]}}</a></li>
                         <li><a routerLink="/assignment4">{{assignments[3]}}</a></li>
                         <li><a routerLink="/assignment5">{{assignments[4]}}</a></li>
-                        <!-- <li><a routerLink="/assignment6">{{assignments[5]}}</a></li> -->
+                        <li><a routerLink="/assignment6">{{assignments[5]}}</a></li>
                     </ul>
                 </li>
             </ul>
