--- a/cmp-reactive-forms/src/app/app.component.html
+++ b/cmp-reactive-forms/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+        <div formGroupName= "userData">
         <div class="form-group">
           <label for="username">Username</label>
           <input
@@ -9,6 +10,8 @@
             id="username"
             formControlName = "username"
             class="form-control">
+            <span *ngIf="!signUpForm.get('userData.username').valid && signUpForm.get('userData.username').touched"
+            class="help-block">Please enter valid Username !</span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -17,7 +20,10 @@
             id="email"
             formControlName="email"
             class="form-control">
+            <span *ngIf="!signUpForm.get('userData.email').valid && signUpForm.get('userData.email').touched"
+            class="help-block">Please enter valid Email !</span>
         </div>
+      </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
             <input
