--- a/cmp-reactive-forms/src/app/app.component.html
+++ b/cmp-reactive-forms/src/app/app.component.html
@@ -2,36 +2,36 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-        <div formGroupName= "userData">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            formControlName = "username"
-            class="form-control">
+        <div formGroupName="userData">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" formControlName="username" class="form-control">
             <span *ngIf="!signUpForm.get('userData.username').valid && signUpForm.get('userData.username').touched"
-            class="help-block">Please enter valid Username !</span>
-        </div>
-        <div class="form-group">
-          <label for="email">email</label>
-          <input
-            type="text"
-            id="email"
-            formControlName="email"
-            class="form-control">
+              class="help-block">Please enter valid Username !</span>
+          </div>
+          <div class="form-group">
+            <label for="email">email</label>
+            <input type="text" id="email" formControlName="email" class="form-control">
             <span *ngIf="!signUpForm.get('userData.email').valid && signUpForm.get('userData.email').touched"
-            class="help-block">Please enter valid Email !</span>
+              class="help-block">Please enter valid Email !</span>
+
+          </div>
         </div>
-      </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
-            <input
-              type="radio"
-              formControlName ="gender"
-              [value]="gender">{{ gender }}
+            <input type="radio" formControlName="gender" [value]="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Hobby</h4>
+          <button class="btn btn-secondary" type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div class="form-group" *ngFor="let hobby of getHobbies(); let i = index">
+            <input type="text" class="form-control" [formControlName]="i">
+          </div>
+        </div>
+
+        <span *ngIf="!signUpForm.valid && signUpForm.touched" class="help-block">Please enter valid Data !</span>
+        <br>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
