--- a/cmp-reactive-forms/src/app/app.component.html
+++ b/cmp-reactive-forms/src/app/app.component.html
@@ -7,7 +7,10 @@
             <label for="username">Username</label>
             <input type="text" id="username" formControlName="username" class="form-control">
             <span *ngIf="!signUpForm.get('userData.username').valid && signUpForm.get('userData.username').touched"
-              class="help-block">Please enter valid Username !</span>
+              class="help-block">
+              <span *ngIf="signUpForm.get('userData.username').errors['nameIsForbidden']">This name is invalid</span>
+              <span *ngIf="signUpForm.get('userData.username').errors['required']">Username is required !</span>
+            </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
