reactive forms assignment

--- a/assignment-angular/src/app/home/home.component.html
+++ b/assignment-angular/src/app/home/home.component.html
@@ -25,6 +25,7 @@
                         <li><a routerLink="/assignment4">{{assignments[3]}}</a></li>
                         <li><a routerLink="/assignment5">{{assignments[4]}}</a></li>
                         <li><a routerLink="/assignment6">{{assignments[5]}}</a></li>
+                        <li><a routerLink="/assignment7">{{assignments[6]}}</a></li>
                     </ul>
                 </li>
             </ul>
